[package]
name = "rustiscorm-runtime"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
http = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
quick-xml = "0.31"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
percent-encoding = "2"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
